# trajectory-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: calculator_v1.yaml  research_v1.yaml  research_v2.yaml
benchmarks/calculator/: benchmark.yaml
benchmarks/research/: benchmark.yaml
scripts/: _demo_commands.sh  demo.sh  record_demo.sh  seed_demo.py
tests/: test_api.py  test_bench.py  test_judges.py  test_runner.py  test_storage.py
tlab/: cli.py
tlab/api/: __init__.py  routes.py  schemas.py
tlab/bench/: __init__.py  loader.py  schema.py
tlab/judges/: __init__.py  output.py  rubric.py  schema.py  trajectory.py
tlab/runner/: __init__.py  loop.py  tools.py  trace.py
tlab/storage/: __init__.py  crud.py  engine.py  models.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/compare/: page.tsx
web/src/app/runs/: page.tsx
web/src/app/runs/[id]/: page.tsx
web/src/app/runs/[id]/cases/[caseId]/: page.tsx
web/src/components/: ComparePicker.tsx  JudgePanel.tsx  ScoreBadge.tsx  StatBadges.tsx  TrajectoryTimeline.tsx
web/src/lib/: api.ts  types.ts
