[project]
name = "tlab"
version = "0.1.0"
description = "Trajectory-level evaluation harness for tool-using LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.19",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
tlab = "tlab.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
